# PL-2-Project

./: .gitignore  CLI_GUIDE.md  PRD.md  README.md  pyproject.toml
backups/csv_baseline/examples/: new_version.csv  old_version.csv
backups/csv_baseline/tests/fixtures/: sample_v1.csv  sample_v2.csv
docs/diagrams/: AnalyzeFlow.mmd  CodeFlow.mmd  ReportGenerator.mmd  explain.mmd  schema.mmd
docs/plans/: 2026-04-08-interactive-cli-fzf.md
examples/test_cases/: README.md  all_defects_new.csv  all_defects_old.csv  basic_add_remove_new.csv  basic_add_remove_old.csv  rename_reorder_new.csv  rename_reorder_old.csv  row_diff_key_new.csv  row_diff_key_old.csv  type_drift_new.csv  type_drift_old.csv
src/drift/: __init__.py  cli.py  explain.py  loader.py  report.py  rows.py  schema.py  types.py  utils.py
tests/: __init__.py  test_cli.py  test_loader.py  test_report.py  test_rows.py  test_schema.py  test_types.py
