[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "drift-analyzer"
version = "1.0.0"
description = "Explainable Schema Drift Analyzer for CSV Datasets"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Saptanshu Wanjari" }
]
keywords = ["csv", "schema", "drift", "analysis", "data-quality"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Utilities",
]
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
drift = "drift.cli:app"

[project.urls]
Homepage = "https://github.com/saptanshu/drift-analyzer"
Documentation = "https://github.com/saptanshu/drift-analyzer#readme"
Repository = "https://github.com/saptanshu/drift-analyzer"

[tool.hatch.build.targets.wheel]
packages = ["src/drift"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"